# wordle

./: FINAL_TEST.md  demo.hs  test-assistant.hs  test-colors.hs  test-duplicate-letters.hs  wordle.cabal
dist-newstyle/cache/: compiler  config  elaborated-plan  improved-plan  plan.json  solver-plan  source-hashes  up-to-date
dist-newstyle/packagedb/ghc-9.4.7/: package.cache  wordle-0.1.0.0-inplace.conf
src/: Lib.hs
src/Wordle/: Assistant.hs  ColorLogic.hs  Game.hs  Interactive.hs  Monad.hs  TestGame.hs  Types.hs  WordList.hs
