cabal-version: 2.4
name: wordle
version: 0.1.0.0
synopsis: A simple Haskell project
description: Please see the README on GitHub at <https://github.com/githubuser/wordle#readme>
license: BSD-3-Clause
author: Author name here
maintainer: example@example.com
copyright: 2024 Author name here
category: Web
build-type: Simple

executable wordle
    main-is: Main.hs
    hs-source-dirs: app
    default-language: Haskell2010
    build-depends: base >=4.7 && <5
                 , mtl
                 , random
                 , text
                 , containers
                 , wordle

library
    hs-source-dirs: src
    default-language: Haskell2010
    build-depends: base >=4.7 && <5
                 , mtl
                 , random
                 , text
                 , containers
    exposed-modules: Lib
                   , Wordle.Types
                   , Wordle.Monad

test-suite wordle-test
    type: exitcode-stdio-1.0
    hs-source-dirs: test
    main-is: Spec.hs
    build-depends: base >=4.7 && <5
                 , wordle
    default-language: Haskell2010